test/data/syntax-errors/function-missing-end.ava
var thisFunction = () -> return 1;